tests/enum_into/compile_fail/container/missing_attribute.stderr
error: enum_into attribute with target enum names is required
 --> tests/enum_into/compile_fail/container/missing_attribute.rs:3:10
  |
3 | #[derive(EnumInto)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumInto` (in Nightly builds, run with -Z macro-backtrace for more info)
